--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SQLite_Inserting_Retrieving_Data_RecyclerView_Android_Github</string>
+    <string name="text_comma">,</string>
+    <string name="text_dollor">$</string>
 </resources>
